--- a/ntwist/src/Components/Navbar/Navbar.module.css
+++ b/ntwist/src/Components/Navbar/Navbar.module.css
@@ -1,4 +1,4 @@
-/* Merged CSS Styles */
+
 body {
     margin: 0;
     padding: 0;
@@ -8,7 +8,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #333;
+    background-color: transparent;
     color: white;
     padding: 10px 20px;
   }
@@ -26,13 +26,34 @@ body {
   .menu-list {
     list-style: none;
     display: flex;
+    font-size: 20px;
+
   }
   
+  
+
   .menu-list li {
-    margin-right: 20px;
-    cursor: pointer;
+    margin-right: 50px;
     position: relative;
+    overflow: hidden;
+    cursor: pointer;
   }
+  
+  .menu-list li::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 0;
+    height: 2px;
+    background-color: white;
+    transition: width 0.3s ease;
+  }
+  
+  .menu-list li:hover::before {
+    width: 100%;
+  }
+  
   
   .sub-menu {
     position: relative;
@@ -41,17 +62,28 @@ body {
   .sub-menu ul {
     display: none;
     position: absolute;
-    background-color: #333;
+    background-color: white;
     list-style: none;
     padding: 0;
     margin: 0;
-    opacity: 0; /* Add initial opacity */
-    transform: translateY(-10px); /* Add initial translateY for the transition effect */
-    transition: opacity 0.3s ease, transform 0.3s ease; /* Add transition properties */
+    opacity: 0; 
+    transform: translateY(-10px); 
+    transition: opacity 0.3s ease, transform 0.3s ease; 
   }
   
   .sub-menu:hover ul {
     display: block;
+  }
+  .menu-list li:hover .sub-menu ul {
+    display: block;
+    /* Add transition properties for smooth appearance */
+    transition: opacity 0.3s ease, transform 0.3s ease;
+    /* ... other styles */
+  }
+  
+  .menu-list li:hover .sub-menu ul li {
+    /* Add styles for sub-item appearance */
+    padding: 10px;
   }
   
   .sub-menu ul li {
@@ -64,7 +96,7 @@ body {
     cursor: pointer;
   }
   
-  /* Media query for mobile layout */
+
   @media (max-width: 768px) {
     .menu-list {
       display: none;
@@ -72,22 +104,41 @@ body {
   
     .mobile-toggle {
       display: block;
+      /* z-index: 1; */
     }
-  
+
     .mobile-menu {
       display: block;
+      background-color: white;
+      opacity: 1;
+      transform: translateY(0);
+      transition: opacity 0.3s ease, transform 0.3s ease;
     }
-  
+    
     .mobile-menu ul {
       flex-direction: column;
     }
-  
+    
     .mobile-menu li {
       margin: 10px 0;
     }
-  
+    
     .mobile-menu .sub-menu ul {
       left: 0;
     }
-  }
-  
+    
+    .sub-menu ul {
+      display: none;
+      opacity: 0;
+      transform: translateY(-10px); 
+      transition: opacity 0.3s ease, transform 0.3s ease;
+    }
+    
+    .sub-menu.open ul {
+      display: block;
+      opacity: 1;
+      transform: translateY(0); /* Change translateY to reveal the submenu */
+    }
+    
+}
+
