Adjusting the footer item allignment

--- a/ntwist/src/Components/Footer/Footer.module.css
+++ b/ntwist/src/Components/Footer/Footer.module.css
@@ -56,10 +56,13 @@
   }
   
   @media (max-width: 768px) {
-    .menu .second-line{
+    .menu{
+      display: table-column;
+    }
+    /* .menu .first-line{
         margin-left: 40px;
     }
     .menu .second-line {
       margin-left: 30px;
-    }
+    } */
   }
